# bedrock-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
bedrock_lens/: cli.py  client.py  cloudwatch.py  display.py  pricing.py  runner.py  setup_cmd.py
