[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-lens"
version = "0.1.5"
description = "Real-time token usage and cost monitoring for AWS Bedrock"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
bedrock-lens = "bedrock_lens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bedrock_lens"]
